# verihubs_tech_test

./: .gitignore  README.md  daily_order_by_status.py  pyproject.toml  visualization_and_findings.ipynb
.tmp_dagster_home_k3fi9f2f/history/: runs.db
.tmp_dagster_home_k3fi9f2f/history/runs/: .db  .db-shm  6e0bad4d-c53e-42ea-aa99-40b6b2939798.db  6e0bad4d-c53e-42ea-aa99-40b6b2939798.db-shm  d5304879-69ca-47aa-ad67-9854d6731aee.db  index.db
.tmp_dagster_home_k3fi9f2f/schedules/: schedules.db
.tmp_dagster_home_k3fi9f2f/storage/6e0bad4d-c53e-42ea-aa99-40b6b2939798/compute_logs/: xbvcwhsc.err  xbvcwhsc.out
.tmp_dagster_home_k3fi9f2f/storage/d5304879-69ca-47aa-ad67-9854d6731aee/compute_logs/: wxdnebre.err
src/verihubs/: definitions.py
src/verihubs/defs/: Untitled-1.ipynb  assets.py
