[project]
name = "verihubs"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.1",
    "duckdb>=1.4.1",
    "pandas>=2.0.3",
    "kagglehub>=0.3.7",
    "filelock>=3.12.2",
    "dagster-webserver>=1.12.1",
    "dagster-dg-cli>=1.12.1",
    "matplotlib",
    "seaborn",
    "numpy",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "verihubs"
registry_modules = [
    "verihubs.components.*",
]


